fixed buttons being too dark when active

--- a/site/public/css/bootstrap.css
+++ b/site/public/css/bootstrap.css
@@ -73,7 +73,7 @@ fieldset[disabled] a.btn {
 .btn-default:focus,
 .btn-default.focus {
     color: var(--standard-deep-dark-gray);
-    background-color: var(--standard-pale-blue-gray);
+    background-color: var(--btn-standard-pale-blue-gray);
 }
 .btn-default:hover {
     color: var(--standard-deep-dark-gray);
@@ -83,7 +83,7 @@ fieldset[disabled] a.btn {
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
     color: var(--standard-deep-dark-gray);
-    background-color: var(--standard-pale-blue-gray);
+    background-color: var(--btn-standard-pale-blue-gray);
 }
 .btn-default:active:hover,
 .btn-default.active:hover,
