--- a/site/public/css/colors.css
+++ b/site/public/css/colors.css
@@ -56,6 +56,7 @@
     --alert-invalid-entry-pink: #FFDDDD;
 
     --standard-pale-blue-gray: #e8f0f7;
+    --btn-standard-pale-blue-gray: #e8f0f7;
     --standard-light-blue-gray: #ddddff;
     --standard-pale-gray: #f5f5f5;
     --standard-hover-light-gray: #e5e5e5;
@@ -250,6 +251,7 @@
       --alert-invalid-entry-pink: #FFDDDD;
 
       --standard-pale-blue-gray: #2a2224;
+      --btn-standard-pale-blue-gray: #e8f0f7;
       --standard-light-blue-gray: #ddddff;
       --standard-pale-gray: #f5f5f5;
       --standard-hover-light-gray: #686868;
